[modify] update image

--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,7 @@
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/community1.webp" alt="Community Support 1"></div>
                         <div class="col-4"><img class="img-fluid" src="images/csr/community2.webp" alt="Community Support 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/community3.webp" alt="Community Support 3"></div>
                     </div>
                 </div>
                 <div class="col-lg-6 p-2">
@@ -1202,6 +1203,8 @@
                     <p>H Hospitality Group also supports various schools by offering on-the-job training opportunities for students. Trainees are assigned to different properties within HHG, including roles in Food & Beverage, housekeeping, front office, and even head office departments such as HR, Accounting, and Purchasing.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/brigada1.webp" alt="Brigada Eskwela 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada2.webp" alt="Brigada Eskwela 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada3.webp" alt="Brigada Eskwela 3"></div>
                     </div>
                 </div>
                 <div class="col-lg-6 p-2">
@@ -1210,6 +1213,8 @@
                     <p>This year, HHG will launch its own Glee Club to showcase singing talents and a Dance Club to highlight creativity through dances. These initiatives demonstrate that we excel not only in hospitality but also in honing diverse talents. They promote work-life balance within the community by offering our team members opportunities for artistic expression and personal growth. Additionally, these clubs aim to engage with and give back to the community through performances and events that bring people together and celebrate local talent.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/engagement1.webp" alt="Community Engagement 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/engagement2.webp" alt="Community Engagement 2"></div>
+
                     </div>
                 </div>
             </div>
