--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css?v=202408291428" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -403,42 +403,42 @@
                                                         <div class="row">
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/1.webp"
+                                                                    src="images/nacpan_beach_wedding/1.webp"
                                                                     alt="Nacpan Beach Wedding 1" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/2.webp"
+                                                                    src="images/nacpan_beach_wedding/2.webp"
                                                                     alt="Nacpan Beach Wedding 2" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/3.webp"
+                                                                    src="images/nacpan_beach_wedding/3.webp"
                                                                     alt="Nacpan Beach Wedding 3" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/4.webp"
+                                                                    src="images/nacpan_beach_wedding/4.webp"
                                                                     alt="Nacpan Beach Wedding 4" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/5.webp"
+                                                                    src="images/nacpan_beach_wedding/5.webp"
                                                                     alt="Nacpan Beach Wedding 5" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/6.webp"
+                                                                    src="images/nacpan_beach_wedding/6.webp"
                                                                     alt="Nacpan Beach Wedding 6" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/7.webp"
+                                                                    src="images/nacpan_beach_wedding/7.webp"
                                                                     alt="Nacpan Beach Wedding 7" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/nacpac_beach_wedding/8.webp"
+                                                                    src="images/nacpan_beach_wedding/8.webp"
                                                                     alt="Nacpan Beach Wedding 8" />
                                                             </div>
                                                         </div>
