[modify] update nav margin top

--- a/zh-tw.html
+++ b/zh-tw.html
@@ -23,6 +23,20 @@
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css?v=202408291428" rel="stylesheet" />
+
+    <style>
+
+
+        #mainNav.navbar-shrink .langSelectDesktop{
+            margin-top: 15px;
+        }
+
+        #mainNav .langSelectDesktop{
+            margin-top: 25px;
+        }
+
+    </style>
+
 </head>
 
 <body id="page-top">
@@ -51,7 +65,7 @@
                     <li class="nav-item"><a class="nav-link" href="#timeline">時間軸</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">聯絡我們</a></li>
                     <li class="nav-item d-none d-lg-block">
-                        <select id="langSelectDesktop" class="form-select bg-dark text-white" style="margin-top: 20px;"
+                        <select id="langSelectDesktop" class="langSelectDesktop form-select bg-dark text-white"
                             aria-label="語言選擇">
                             <option value="en">🇺🇸 英文</option>
                             <option value="zh" selected>🇹🇼 中文</option>
