[modify] text left

--- a/hotel.html
+++ b/hotel.html
@@ -103,13 +103,13 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#pieceLioModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="images/piecelio/cover.webp" alt="Piece Lio" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#pieceLioModal" data-i18n="hotel.pieceLio.name">Piece Lio</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.pieceLio.description">A luxurious beachfront resort offering stunning views of the ocean and world-class amenities.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
@@ -123,13 +123,13 @@
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-Nacpan-Beach-Resort.jpg"
                             alt="Nacpan Beach Resort" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachResortModal" data-i18n="hotel.nacpanBeachResort.name">Nacpan Beach Resort</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.nacpanBeachResort.description">Experience the beauty of Nacpan Beach at this eco-friendly resort, perfect for nature lovers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
@@ -143,13 +143,13 @@
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-Nacpan-Beach-Glamping.jpg"
                             alt="Nacpan Beach Glamping" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachGlampingModal" data-i18n="hotel.nacpanBeachGlamping.name">Nacpan Beach Glamping</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.nacpanBeachGlamping.description">Enjoy a unique glamping experience with all the comforts of a hotel, right on the beach.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
@@ -163,13 +163,13 @@
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-H-Hotel-Vegan-Hotel.jpg"
                             alt="H Hotel Vegan Hotel" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#hHotelVeganHotelModal" data-i18n="hotel.hHotelVeganHotel.name">H Hotel Vegan Friendly Hotel</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.hHotelVeganHotel.description">A vegan-friendly hotel with plant-based cuisine and eco-conscious rooms.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
@@ -182,13 +182,13 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#jBoutiqueHotelModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-J-Hostel.jpg" alt="J Boutique Hotel" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#jBoutiqueHotelModal" data-i18n="hotel.jBoutiqueHotel.name">J Boutique Hotel</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.jBoutiqueHotel.description">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★</span>
@@ -202,13 +202,13 @@
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-S-Resort-El-Nido.jpg"
                             alt="S Resort El Nido" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#sResortElNidoModal" data-i18n="hotel.sResortElNido.name">S Resort</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.sResortElNido.description">A modern resort offering comfort and convenience for leisure and business travelers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
@@ -221,13 +221,13 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#casaCeciliaModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/casa/casa_1.jpg" alt="Casa Cecilia" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#casaCeciliaModal" data-i18n="hotel.casaCecilia.name">Casa Cecilia</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.casaCecilia.description">A 3-star accommodation located in the heart of El Nido, offering comfort and convenience.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★</span>
@@ -240,13 +240,13 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachVillasModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="images/nacpan_beach_villa/1.webp" alt="Nacpan Beach Villas" />
                     </a>
-                    <div class="featured-text text-center text-lg-left pt-3">
+                    <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachVillasModal" data-i18n="hotel.nacpanBeachVillas.name">Nacpan Beach Villas</a></h4>
                         <p class="text-black-50 mb-0">
                             <span data-i18n="hotel.nacpanBeachVillas.description">Luxurious villas with free WiFi, perfect for couples seeking a romantic getaway.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
-                            <div>
+                            <div class="text-left">
                                 <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
                                 <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
                                 <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
